stuf/src/p3/tests/t007.err
Semantic error on line 3: Incorrect type (double) for initial value of variable 'some_number' of type (int).
