stuf/src/p3/tests/t007.gpl
//Doubles cannot be assigned to integers.
//This should generate an error message
int some_number=3.14;
